; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/smumgr/extr_iceland_smumgr.c_iceland_get_mclk_frequency_ratio.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/smumgr/extr_iceland_smumgr.c_iceland_get_mclk_frequency_ratio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @iceland_get_mclk_frequency_ratio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iceland_get_mclk_frequency_ratio(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %22

8:                                                ; preds = %2
  %9 = load i32, i32* %3, align 4
  %10 = icmp slt i32 %9, 12500
  br i1 %10, label %11, label %12

11:                                               ; preds = %8
  store i32 0, i32* %5, align 4
  br label %21

12:                                               ; preds = %8
  %13 = load i32, i32* %3, align 4
  %14 = icmp sgt i32 %13, 47500
  br i1 %14, label %15, label %16

15:                                               ; preds = %12
  store i32 15, i32* %5, align 4
  br label %20

16:                                               ; preds = %12
  %17 = load i32, i32* %3, align 4
  %18 = sub nsw i32 %17, 10000
  %19 = sdiv i32 %18, 2500
  store i32 %19, i32* %5, align 4
  br label %20

20:                                               ; preds = %16, %15
  br label %21

21:                                               ; preds = %20, %11
  br label %36

22:                                               ; preds = %2
  %23 = load i32, i32* %3, align 4
  %24 = icmp slt i32 %23, 65000
  br i1 %24, label %25, label %26

25:                                               ; preds = %22
  store i32 0, i32* %5, align 4
  br label %35

26:                                               ; preds = %22
  %27 = load i32, i32* %3, align 4
  %28 = icmp sgt i32 %27, 135000
  br i1 %28, label %29, label %30

29:                                               ; preds = %26
  store i32 15, i32* %5, align 4
  br label %34

30:                                               ; preds = %26
  %31 = load i32, i32* %3, align 4
  %32 = sub nsw i32 %31, 60000
  %33 = sdiv i32 %32, 5000
  store i32 %33, i32* %5, align 4
  br label %34

34:                                               ; preds = %30, %29
  br label %35

35:                                               ; preds = %34, %25
  br label %36

36:                                               ; preds = %35, %21
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
